Preview components updated to be more extensible. ExportPlugins can now configure whether to appear separated to in the toolbar using the global report configuration. ResultSetTableModel factory fix to use either Label or name to retrieve column names.

--- a/jfreereport/source/org/jfree/report/modules/gui/csv/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/configuration.properties
@@ -23,3 +23,12 @@ org.jfree.report.modules.gui.csv.Order=40
 # If not defined here, it will default to the platform specific encoding.
 #
 #org.jfree.report.modules.gui.csv.Encoding=Cp1252
+
+#
+# Set to true, to show a button for this export type on the toolbar.
+org.jfree.report.modules.gui.csv.AddToToolbar=false
+
+#
+# Set to true, to separate the menu and toolbar entry from other elements.
+# This inserts an separator after the menu entry.
+org.jfree.report.modules.gui.csv.Separated=false
