--- a/jfreereport/source/org/jfree/report/modules/gui/print/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/configuration.properties
@@ -30,3 +30,21 @@ org.jfree.report.modules.gui.print.pagesetup.Order=60
 # Defines a jobname for the report. If undefined, the java default jobname
 # will be used; the jobname can also be defined in the local report configuration.
 #org.jfree.report.modules.gui.print.JobName=JFreeReport Printing
+
+#
+# Set to true, to show a button for this export type on the toolbar.
+org.jfree.report.modules.gui.print.AddToToolbar=true
+
+#
+# Set to true, to separate the menu and toolbar entry from other elements.
+# This inserts an separator after the menu entry.
+org.jfree.report.modules.gui.print.Separated=false
+
+#
+# Set to true, to show a button for this export type on the toolbar.
+org.jfree.report.modules.gui.print.pagesetup.AddToToolbar=false
+
+#
+# Set to true, to separate the menu and toolbar entry from other elements.
+# This inserts an separator after the menu entry.
+org.jfree.report.modules.gui.print.pagesetup.Separated=true
