--- a/jfreereport/source/org/jfree/report/modules/gui/xls/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/configuration.properties
@@ -14,3 +14,13 @@ org.jfree.report.modules.gui.xls.Enable=true
 # order value will move the menu entry for this plugin to the end of the list.
 #
 org.jfree.report.modules.gui.xls.Order=20
+
+#
+# Set to true, to show a button for this export type on the toolbar.
+org.jfree.report.modules.gui.xls.AddToToolbar=false
+
+#
+# Set to true, to separate the menu and toolbar entry from other elements.
+# This inserts an separator after the menu entry.
+org.jfree.report.modules.gui.xls.Separated=true
+
