Printing Plugin now configurable

--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14print/configuration.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14print/configuration.properties
@@ -16,3 +16,12 @@ org.jfree.report.ext.modules.java14print.Enable=false
 #
 org.jfree.report.ext.modules.java14print.Order=71
 
+#
+# Set to true, to show a button for this export type on the toolbar.
+org.jfree.report.ext.modules.java14print.AddToToolbar=true
+
+#
+# Set to true, to separate the menu and toolbar entry from other elements.
+# This inserts an separator after the menu entry.
+org.jfree.report.ext.modules.java14print.Separated=false
+
