--- a/jfreereport-ext/ant/targets.properties
+++ b/jfreereport-ext/ant/targets.properties
@@ -5,6 +5,7 @@
 ##############################################################
 #
 # Generated files ...
+jfreereport-chart-demo-jar-file=${ext.targetdir}${jfreereport.name}-${jfreereport.version}-chart-demo.jar
 jfreereport-servlet-demo-jar-file=${ext.targetdir}${jfreereport.name}-${jfreereport.version}-servlet-demo.jar
 jfreereport-junit-jar-file=${ext.targetdir}${jfreereport.name}-${jfreereport.version}-junit.jar
 
