LayoutManager fix: LayoutSupport is now passed as parameter. PreviewComponents: Menu and toolbar are configurable now, functionality can be disabled/removed using the report configuration.

--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -54,3 +54,37 @@ org.jfree.report.modules.gui.base.EncodingsAvailable=all
 # The property points to a resources in the classpath, not to a real file!
 org.jfree.report.modules.gui.base.EncodingsFile=/org/jfree/report/modules/gui/base/components/jfreereport-encodings.properties
 
+#
+# Defines, whether and how the navigation functionallity will be exposed to
+# the user. Possible values are:
+#   "disable" to completly remove the navigation elements from the menu and toolbar
+#   "toolbar" to have this functionality on the toolbar only
+#   "menubar" to have this functionality in the menu only
+#   "enable"  to show the functionality in the menu and the toolbar
+org.jfree.report.modules.gui.base.Navigate=enable
+
+#
+# Defines, whether and how the About functionallity will be exposed to
+# the user. Possible values are:
+#   "disable" to completly remove the About elements from the menu and toolbar
+#   "toolbar" to have this functionality on the toolbar only
+#   "menubar" to have this functionality in the menu only
+#   "enable"  to show the functionality in the menu and the toolbar
+org.jfree.report.modules.gui.base.About=enable
+
+#
+# Defines, whether and how the zooming functionallity will be exposed to
+# the user. Possible values are:
+#   "disable" to completly remove the zoom elements from the menu and toolbar
+#   "toolbar" to have this functionality on the toolbar only
+#   "menubar" to have this functionality in the menu only
+#   "enable"  to show the functionality in the menu and the toolbar
+org.jfree.report.modules.gui.base.Zoom=enable
+
+#
+# Defines, whether a menubar will be available in the preview.
+org.jfree.report.modules.gui.base.MenuBarAvailable=true
+
+#
+# Defines, whether a toolbar will be available in the preview.
+org.jfree.report.modules.gui.base.ToolbarAvailable=true
