--- a/jfreereport/source/org/jfree/report/modules/gui/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/module.properties
@@ -15,9 +15,11 @@ depends:
   module: org.jfree.report.modules.output.pageable.graphics.Graphics2DPageableModule
   version.major: 0
   version.minor: 84
+  version.patchlevel: 6
 
 depends:
   module: org.jfree.report.JFreeReportCoreModule
   version.major: 0
   version.minor: 84
+  version.patchlevel: 6
 
