--- a/jfreereport/source/org/jfree/report/modules/output/table/html/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/module.properties
@@ -14,9 +14,11 @@ depends:
   module: org.jfree.report.modules.output.table.base.TableBaseModule
   version.major: 0
   version.minor: 84
+  version.patchlevel: 6
 
 depends:
   module: org.jfree.report.JFreeReportCoreModule
   version.major: 0
   version.minor: 84
+  version.patchlevel: 6
 
