Properties updated to include POI-RC1

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -52,7 +52,7 @@ jaxp-jar-file=gnujaxp.jar
 itext-jar-file=itext-1.00.jar
 
 # Used by: module-output-table-xml
-jakarta-poi-jar-file=poi-2.0-pre3-20030728.jar
+jakarta-poi-jar-file=poi-2.0-RC1-20031102.jar
 
 ##############################################################
 #
