Changed HTMLTableModule --> HtmlTableModule

--- a/jfreereport/source/org/jfree/report/modules/gui/html/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/module.properties
@@ -17,7 +17,7 @@ depends:
   version.patchlevel: 0
 
 depends:
-  module: org.jfree.report.modules.output.table.html.HTMLTableModule
+  module: org.jfree.report.modules.output.table.html.HtmlTableModule
   version.major: 0
   version.minor: 85
   version.patchlevel: 0
