--- a/jfreereport/source/org/jfree/report/modules/misc/referencedoc/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/referencedoc/module.properties
@@ -16,7 +16,7 @@ depends:
   version.minor: 84
 
 depends:
-  module: org.jfree.report.modules.output.table.html.HTMLTableModule
+  module: org.jfree.report.modules.output.table.html.HtmlTableModule
   version.major: 0
   version.minor: 84
 
