Merge: The first huge commit ..

--- a/jfreereport/source/org/jfree/report/modules/misc/referencedoc/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/referencedoc/module.properties
@@ -1,34 +1,38 @@
 #
-# Reference documentation generator for the extended xml parser.
+# Reference documentation generatorBeanInfoBeanInfoBeanInfo for the extended xml parser.
 #
 
 module-info:
   name: ext-parser-reference-doc
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: A reference documentation generator for the ext parser.
+  description: A reference documentation generatorBeanInfoBeanInfoBeanInfo for the ext parser.
   version.major: 0
-  version.minor: 84
+  version.minor: 85
   version.patchlevel: 0
 
 depends:
   module: org.jfree.report.modules.output.pageable.pdf.PDFPageableModule
   version.major: 0
-  version.minor: 84
+  version.minor: 85
+  version.patchlevel: 0
 
 depends:
   module: org.jfree.report.modules.output.table.html.HtmlTableModule
   version.major: 0
-  version.minor: 84
+  version.minor: 85
+  version.patchlevel: 0
 
 depends:
   module: org.jfree.report.modules.parser.ext.ExtParserModule
   version.major: 0
-  version.minor: 84
+  version.minor: 85
+  version.patchlevel: 0
 
 depends:
   module: org.jfree.report.JFreeReportCoreModule
   version.major: 0
-  version.minor: 84
+  version.minor: 85
+  version.patchlevel: 0
 
 
 
