--- a/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
@@ -8,7 +8,7 @@
 # The default font-encoding for the OutputTarget.
 # Can be changed with PDFOutputTarget.setFontEncoding for the specific
 # instance if needed.
-#org.jfree.report.modules.output.pageable.pdf.Encoding=Identity-H
+org.jfree.report.modules.output.pageable.pdf.Encoding=Cp1251
 
 #
 # Defines whether to embed fonts in the generated PDF. This will result in larger PDF
