--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -37,11 +37,11 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-0.9.1a.jar
-pixie-jar-file=pixie-0.8.1.jar
+jcommon-jar-file=jcommon-1.0.0-pre2-cvs.jar
+pixie-jar-file=pixie-0.8.3.jar
 
 # Used by: module-misc-beanshell
-beanshell-jar-file=bsh-1.2b6.jar
+beanshell-jar-file=bsh-1.3.0.jar
 
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
@@ -49,7 +49,7 @@ jaxp-jar-file=gnujaxp.jar
 # Used by: module-output-pdf
 #          module-output-table-rtf
 #          module-output-support-itext
-itext-jar-file=itext-1.00.jar
+itext-jar-file=itext-1.2.jar
 
 # Used by: module-output-table-xml
 jakarta-poi-jar-file=poi-2.0-RC1-20031102.jar
