BugFix: WmfFile.draw(..) did not reset the object-state, so if an buggy WMF file was given, the drawing might consume all free object slots on subsequent draw calls.

--- a/pixie/ant/build.xml
+++ b/pixie/ant/build.xml
@@ -82,7 +82,7 @@
 
   <!-- Make .zip distribution for Pixie -->
   <!-- as an separate download -->
-  <target name="make-zip" depends="compile, compile-junit">
+  <target name="make-zip" depends="compile">
 
     <!-- make a temporary distribution directory -->
     <mkdir dir="distribution"/>
@@ -136,7 +136,7 @@
   <!-- Make .tar.gz distribution for Pixie -->
   <!-- the war file is not included, as it can be rebuild easily and is also available -->
   <!-- as an separate download -->
-  <target name="make-targz" depends="compile, compile-junit">
+  <target name="make-targz" depends="compile">
 
     <!-- make a temporary distribution directory -->
     <mkdir dir="distribution"/>
