Fixes based on JUnit tests..

--- a/jfreereport/source/org/jfree/report/modules/output/table/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/base/configuration.properties
@@ -8,3 +8,5 @@
 # complexity.
 #
 org.jfree.report.modules.output.table.base.StrictLayout=false
+
+org.jfree.report.targets.table.TableWriter.DebugReportLayout=false
