First part of the ANT build update.

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.8.5a
+jfreereport.version=0.8.5
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -38,13 +38,14 @@ manifest-lib-prefix=lib/
 
 # Used by: core libraries
 jcommon-jar-file=jcommon-1.0.0-pre2-cvs.jar
-pixie-jar-file=pixie-0.8.3.jar
+pixie-jar-file=pixie-0.8.4.jar
 
 # Used by: module-misc-beanshell
 beanshell-jar-file=bsh-1.3.0.jar
 
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
+jcommon-xml-jar-file=jcommon-xml-1.0.0-pre2-cvs.jar
 
 # Used by: module-output-pdf
 #          module-output-table-rtf
@@ -52,51 +53,54 @@ jaxp-jar-file=gnujaxp.jar
 itext-jar-file=itext-1.2.jar
 
 # Used by: module-output-table-xml
-jakarta-poi-jar-file=poi-2.0-RC1-20031102.jar
+jakarta-poi-jar-file=poi-2.5.1-final-20040804.jar
 
 ##############################################################
 #
 # Generated files ...
-jfreereport-all-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-all.jar
+jfreereport-all-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}.jar
 jfreereport-demo-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-demo.jar
+jfreereport-bundle-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-bundle.jar
 
 core-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-core.jar
 
-module-misc-beanshell-file=${targetdir}${jfreereport.name}-${jfreereport.version}-misc-beanshell.jar
-module-misc-configstore-base-file=${targetdir}${jfreereport.name}-${jfreereport.version}-misc-configstore-base.jar
-module-misc-configstore-filesystem-file=${targetdir}${jfreereport.name}-${jfreereport.version}-misc-configstore-filesystem.jar
-module-misc-logging-base-file=${targetdir}${jfreereport.name}-${jfreereport.version}-misc-logging-base.jar
-module-misc-tablemodel-file=${targetdir}${jfreereport.name}-${jfreereport.version}-misc-tablemodel.jar
-module-misc-referencedoc-file=${targetdir}${jfreereport.name}-${jfreereport.version}-misc-referencedoc.jar
+module-misc-beanshell-file=${targetdir}${jfreereport.name}-misc-beanshell-${jfreereport.version}.jar
+module-misc-configstore-base-file=${targetdir}${jfreereport.name}-misc-configstore-base-${jfreereport.version}.jar
+module-misc-configstore-filesystem-file=${targetdir}${jfreereport.name}-misc-configstore-filesystem-${jfreereport.version}.jar
+module-misc-logging-base-file=${targetdir}${jfreereport.name}-misc-logging-base-${jfreereport.version}.jar
+module-misc-tablemodel-file=${targetdir}${jfreereport.name}-misc-tablemodel-${jfreereport.version}.jar
+module-misc-referencedoc-file=${targetdir}${jfreereport.name}-misc-referencedoc-${jfreereport.version}.jar
+module-misc-survey-file=${targetdir}${jfreereport.name}-misc-survey-${jfreereport.version}.jar
 
-module-output-csv-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-csv.jar
-module-output-xml-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-xml.jar
+module-output-meta-file=${targetdir}${jfreereport.name}-output-meta-${jfreereport.version}.jar
+module-output-csv-file=${targetdir}${jfreereport.name}-output-csv-${jfreereport.version}.jar
+module-output-xml-file=${targetdir}${jfreereport.name}-output-xml-${jfreereport.version}.jar
 
-module-output-support-itext-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-support-itext.jar
-module-output-support-pagelayout-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-support-pagelayout.jar
+module-output-support-itext-file=${targetdir}${jfreereport.name}-output-support-itext-${jfreereport.version}.jar
+module-output-support-pagelayout-file=${targetdir}${jfreereport.name}-output-support-pagelayout-${jfreereport.version}.jar
 
-module-output-pageable-base-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-pageable-base.jar
-module-output-pageable-graphics-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-pageable-graphics.jar
-module-output-pageable-pdf-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-pageable-pdf.jar
-module-output-pageable-plaintext-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-pageable-plaintext.jar
+module-output-pageable-base-file=${targetdir}${jfreereport.name}-output-pageable-base-${jfreereport.version}.jar
+module-output-pageable-graphics-file=${targetdir}${jfreereport.name}-output-pageable-graphics-${jfreereport.version}.jar
+module-output-pageable-pdf-file=${targetdir}${jfreereport.name}-output-pageable-pdf-${jfreereport.version}.jar
+module-output-pageable-plaintext-file=${targetdir}${jfreereport.name}-output-pageable-plaintext-${jfreereport.version}.jar
 
-module-output-table-base-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-table-base.jar
-module-output-table-csv-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-table-csv.jar
-module-output-table-html-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-table-html.jar
-module-output-table-rtf-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-table-rtf.jar
-module-output-table-xls-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-table-xls.jar
+module-output-table-base-file=${targetdir}${jfreereport.name}-output-table-base-${jfreereport.version}.jar
+module-output-table-csv-file=${targetdir}${jfreereport.name}-output-table-csv-${jfreereport.version}.jar
+module-output-table-html-file=${targetdir}${jfreereport.name}-output-table-html-${jfreereport.version}.jar
+module-output-table-rtf-file=${targetdir}${jfreereport.name}-output-table-rtf-${jfreereport.version}.jar
+module-output-table-xls-file=${targetdir}${jfreereport.name}-output-table-xls-${jfreereport.version}.jar
 
-module-parser-base-file=${targetdir}${jfreereport.name}-${jfreereport.version}-parser-base.jar
-module-parser-ext-file=${targetdir}${jfreereport.name}-${jfreereport.version}-parser-ext.jar
-module-parser-extwriter-file=${targetdir}${jfreereport.name}-${jfreereport.version}-parser-extwriter.jar
-module-parser-simple-file=${targetdir}${jfreereport.name}-${jfreereport.version}-parser-simple.jar
+module-parser-base-file=${targetdir}${jfreereport.name}-parser-base-${jfreereport.version}.jar
+module-parser-ext-file=${targetdir}${jfreereport.name}-parser-ext-${jfreereport.version}.jar
+module-parser-extwriter-file=${targetdir}${jfreereport.name}-parser-extwriter-${jfreereport.version}.jar
+module-parser-simple-file=${targetdir}${jfreereport.name}-parser-simple-${jfreereport.version}.jar
 
-module-gui-base-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-base.jar
-module-gui-converter-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-converter.jar
-module-gui-config-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-config.jar
-module-gui-csv-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-csv.jar
-module-gui-html-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-html.jar
-module-gui-pdf-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-pdf.jar
-module-gui-plaintext-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-plaintext.jar
-module-gui-print-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-print.jar
-module-gui-xls-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-xls.jar
+module-gui-base-file=${targetdir}${jfreereport.name}-gui-base-${jfreereport.version}.jar
+module-gui-converter-file=${targetdir}${jfreereport.name}-gui-converter-${jfreereport.version}.jar
+module-gui-config-file=${targetdir}${jfreereport.name}-gui-config-${jfreereport.version}.jar
+module-gui-csv-file=${targetdir}${jfreereport.name}-gui-csv-${jfreereport.version}.jar
+module-gui-html-file=${targetdir}${jfreereport.name}-gui-html-${jfreereport.version}.jar
+module-gui-pdf-file=${targetdir}${jfreereport.name}-gui-pdf-${jfreereport.version}.jar
+module-gui-plaintext-file=${targetdir}${jfreereport.name}-gui-plaintext-${jfreereport.version}.jar
+module-gui-print-file=${targetdir}${jfreereport.name}-gui-print-${jfreereport.version}.jar
+module-gui-xls-file=${targetdir}${jfreereport.name}-gui-xls-${jfreereport.version}.jar
