--- a/jfreereport-ext/ant/targets.properties
+++ b/jfreereport-ext/ant/targets.properties
@@ -13,3 +13,10 @@ module-ext-java14config-file=${targetdir}${jfreereport.name}-${jfreereport.versi
 module-ext-java14log-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-java14log.jar
 module-ext-java14print-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-java14print.jar
 module-ext-log4jlog-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-log4jlog.jar
+module-ext-java14imageio-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-java14imageio.jar
+module-ext-barcode-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-barcode.jar
+
+#
+# Support for the maven build 
+module-ext-all-file=${targetdir}${jfreereport.name}-ext-${jfreereport.version}.jar
+module-ext-bundle-file=${targetdir}${jfreereport.name}-ext-${jfreereport.version}-bundle.jar
